- Fixed terminal visibility on windows.

--- a/gui.css
+++ b/gui.css
@@ -6,7 +6,7 @@ actionbar button.link {
   padding: 0 0.5em 0 0.5em;
 }
 
-.terminal.view, .terminal.view text {
+.terminal > .view, .terminal > .view text {
   background-color: black;
 }
 
